--- a/source_files/frontend/src/app/aboutpage/aboutpage.component.html
+++ b/source_files/frontend/src/app/aboutpage/aboutpage.component.html
@@ -1,2 +1,66 @@
-<p>workin
-</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="aboutpage.component.css">
+</head>
+<body>
+    <img class="bg1" src="../assets/bg1.jpg">
+    <div class="about-section">
+        <h1>About Us</h1>
+        <p>Our main goal is to assist and make the job of international coordinators job easier and more accessible for students.</p>
+        
+    </div>
+    <h2 style="text-align: center; color: rgb(50, 50, 51); ">Our Team</h2>    
+    
+    <div class="img-wrap">
+        <img src="../assets/rodolf.jpg">
+    </div>
+    <div class="rodolf-text">
+        <h3>Abanoub Rodolf Boctor</h3>
+        <ul>
+            <li>Computer science Bsc ELTE</li>
+            <li>23 years old</li>
+            <li> Egypt</li>
+          </ul>
+    </div>
+    <div class="img-wrap1">
+        <img src="../assets/amina.jpg">
+    </div>
+    <div class="amina-text">
+        <h3>Amina Manzoor</h3>
+        <ul>
+            <li>Computer science Bsc ELTE</li>
+            <li>25 years old</li>
+            <li> Pakistan</li>
+          </ul>
+    </div>
+    <div class="img-wrap2">
+        <img src="../assets/odii.jpg">
+    </div>
+    <div class="odii-text">
+        <h3>Odbayar Erdenebat</h3>
+        <ul>
+            <li>Computer science Bsc ELTE</li>
+            <li>24 years old</li>
+            <li> Mongolia</li>
+          </ul>
+    </div>
+
+    <div class="img-wrap3">
+        <img src="../assets/tim.jpg">
+    </div>
+    <div class="tim-text">
+        <h3>Timilehin Bisola</h3>
+        <ul>
+            <li>Computer science Bsc ELTE</li>
+            <li>24 years old</li>
+            <li> Nigeria</li>
+          </ul>
+    </div>
+    
+    
+</body>
+</html>
